[package]
name = "hash-dupl"
version = "0.3.5"
authors = ["Alexey Voznyuk <me@swizard.info>"]

[dependencies]
bin-merge-pile = { git = "https://bitbucket.org/swizard/bin-merge-pile.git" }
tokenizer = { git = "https://bitbucket.org/swizard/tokenizer.git" }
token-ngrams = { git = "https://github.com/swizard0/token-ngrams.git" }
slices-merger = { git = "https://github.com/swizard0/slices-merger.git" }
rmp-serde = "0.9"
serde = "0.7"
time = "0.1"
rand = "0.3"
fnv = "1.0"
